<resources>
    <string name="app_name">First UI Assignment</string>
    <string name="email_adress">email_adress</string>
    <string name="password">password</string>
    <string name="login_page">login_page</string>
    <string name="login_page1">login page</string>
    <string name="or">or</string>
    <string name="sign_up">sign up</string>
    <string name="back_to_main">back to main</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="forgot_password2">forgot password</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="login1">login</string>
    <string name="don_t_have_an_account1">don\'t have an account?</string>
</resources>